Sprint 12: Fix review notes